src/objects/Apttus_Config2__Feature__c.object
<CustomObject>
    <description>Represents a single feature in a feature set</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The feature description</description>
        <inlineHelpText>The feature description</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FeatureSetId__c</fullName>
        <description>ID of the associated feature set</description>
        <inlineHelpText>ID of the associated feature set</inlineHelpText>
        <label>Feature Set</label>
        <referenceTo>Apttus_Config2__FeatureSet__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The feature display sequence</description>
        <inlineHelpText>The feature display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>